--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,16 @@
             <artifactId>easy-rules-support</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
     </dependencies>
 
     <build>
