--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>icu4j</artifactId>
             <version>74.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.wnameless.json</groupId>
+            <artifactId>json-flattener</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
