--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>json-flattener</artifactId>
             <version>0.16.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.json-template</groupId>
+            <artifactId>jsontemplate</artifactId>
+            <version>0.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
