--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,22 @@
             <artifactId>jsontemplate</artifactId>
             <version>0.2.1</version>
         </dependency>
+        <!-- -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.16</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>itext7-core</id>
+            <name>itext7-core</name>
+            <url>https://mvnrepository.com/artifact/com.itextpdf/itext7-core</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
