--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             <version>7.1.16</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
